--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>字符串</title>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div></div>
+    <h3>这是一个html文件</h3>
 </body>
 
 </html>
