--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>这是一个html文件 version1.0</h3>
     <h4>this is dev branch</h4>
     <h5>fix branch</h5>
+    <div class="text-center">fix 上的修改</div>
 </body>
 
 </html>
